@@ -1,5 +1,10 @@
   * Added log levels warning, error and critical. (issue #1)
+
   * Only compare MAJOR and MINOR for a valid SiriDB version. (issue #2)
+
   * Added check for maximum number of databases. (issue #3)
+
   * Updated manage tool for being compliant with the current
     configuration file. (issue #4)
+
+  * Changed a few log lines. (some message are only for debug purpose)
